--- a/TUDthesis.tex
+++ b/TUDthesis.tex
@@ -191,7 +191,7 @@ Subject to
 \begin{equation}
 b(e^{v})  \; \leq \; R_{E}(P) \;\forall P \;\epsilon \;M_{E}(e^{v})
 \end{equation}
-As we mentioned earlier, objective functions can be maximized (minimized) depending upon the optimality factor. If suppose a netwrok operator wants to increase its revenue by mapping more number of VNs , then the VNE problem can be modeled as a optimization problem whose objective is to maximize revenue. So the goal function can be defined as maximizing the number of VN mappings by minimizing physical resource utilization. The basic VN resource constraints (eqn. 2 and eqn. 4) is still applied along with goal function. The formulations provided in this work is the basis for future embedding algorithms that we are going to discuss in next set of approaches. The set of integer constraints presented in \cite{coord_map} are computationally intractable. Those constraints are relaxed to obtain linear program and the solution is applied to D-ViNE and E-ViNE techniques. D-ViNE accepts online VN requests and maps them on to substrate one at a time. Mapping decision is solely based on previous VN requests. The linearized solution of MIP used in this technique will help in breaking the ties in selecting unmapped substrate node. After successful mapping of nodes, multi-commodity flow algorithm is used to map virtual links on to physical links.\newline
+As we mentioned earlier, objective functions can be maximized (minimized) depending upon the optimality factor. If suppose a network operator wants to increase its revenue by mapping more number of VNs, then the VNE problem can be modeled as a optimization problem whose objective is to maximize revenue. So the goal function can be defined as maximizing the number of VN mappings by minimizing physical resource utilization. The basic VN resource constraints (eqn. 2 and eqn. 4) is still applied along with goal function. The formulations provided in this work is the basis for future embedding algorithms that we are going to discuss in next set of approaches. The set of integer constraints presented in \cite{coord_map} are computationally intractable. Those constraints are relaxed to obtain linear program and the solution is applied to D-ViNE and E-ViNE techniques. D-ViNE accepts online VN requests and maps them on to substrate one at a time. Mapping decision is solely based on previous VN requests. The linearized solution of MIP used in this technique will help in breaking the ties in selecting unmapped substrate node. After successful mapping of nodes, multi-commodity flow algorithm is used to map virtual links on to physical links.\newline
 \hspace*{1cm}R-ViNE is similar to D-ViNE but uses randomized selection od substrate nodes instead of deterministic selection. It maintains a range of probability values for each virtual node mapped to each substrate node. Based on this probability, substrate node hosts virtual nodes of a VN request. From the experiment conducted on these two algorithms, it was observed that coordinated mapping of links and nodes results in higher acceptance ratio of VNs. The objective function presented here helps in load balancing at the substrate nodes which in turn increase VN acceptance ratio. It is to be noted that better performance and increased resource utilization is achieved compared to heuristic methods.\newline
 
 The methods proposed above allows coordinated link and node mappings unlike heuristic methods where either node mapping or link mapping is performed using some greedy techniques. The new mathematical approach using MIP formulations is also presented for VN provisioning which increases quality of heuristic methods. This approach becomes basis for next set of MIP based VNE algorithms that try to optimally allocate resources to VNs. It is to be noted that coordination between mappings increases solution space and also increase in VN acceptance ratio. \newline
